cmake_minimum_required(VERSION 3.8.2)
project(dish)
set(CMAKE_CXX_STANDARD 17)
include_directories(include)
include_directories(include/bundled)
include_directories(/usr/include/lua5.4)
find_package(Lua)
add_executable(dish src/main.cpp src/dish.cpp src/builtin.cpp src/job.cpp src/parser.cpp src/lexer.cpp src/token.cpp src/dish_lua.cpp src/line_editor.cpp)
target_link_libraries(dish ${LUA_LIBRARIES})
