cmake_minimum_required(VERSION 3.8.2)
project(dish)
set(CMAKE_CXX_STANDARD 17)
add_compile_options("-finput-charset=UTF8" "-fexec-charset=UTF8")
find_package(Lua REQUIRED)
include_directories(include)
include_directories(include/dish/bundled)
include_directories(include/dish/bundled/lua5.4)
add_executable(dish src/main.cpp src/dish.cpp src/builtin.cpp src/job.cpp src/parser.cpp src/lexer.cpp src/token.cpp src/dish_lua.cpp src/line_editor.cpp src/utils.cpp)
target_link_libraries(dish ${LUA_LIBRARIES})
